[package]
authors = ['Elvis Dedic']
description = 'Pallet for Game Logic'
edition = '2018'
homepage = 'https://github.com/leviathan88'
license = 'Unlicense'
name = 'pallet-game-logic'
repository = 'https://github.com/leviathan88/pallet-game-logic.git'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }

[dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
version = '2.0.0'

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
]
